--- a/app/css/temp.styl
+++ b/app/css/temp.styl
@@ -20,5 +20,108 @@ body
 	box-sizing border-box
 a
 	text-decoration none
+	color #fff
 img
 	max-width 100%
+.wrap
+	width 60%
+	margin 0 auto
+	clearfix()
+header
+	position fixed
+	top 0
+	left 0
+	width 100%
+	background rgba(0 0 0 .15)
+	.wrap
+		padding 15px 0
+		position relative
+		.logo
+			position absolute
+			top 15px
+			left 50%
+			transform translateX(-50%)
+		.main-title
+			float left
+			p
+				margin 0
+				font-weight bold
+				font-size 30px
+			span
+				font-size 24px
+		.callback
+			float right
+			p
+				margin 0
+				font-size 36px
+			a
+				display block
+				background #3e87d1
+				transition 0.2s
+				border-radius 2px
+				padding 10px 0
+				text-align center
+				text-transform uppercase
+				letter-spacing 1px
+				&:hover
+					background #4d97e3
+section.main
+	background url("../images/main-bg.png") no-repeat center/cover
+	.wrap
+		padding 15vw 0 12vw 0
+		.main-form
+			float right
+			background #f6f6f6
+			.form-title
+				padding 1vw 2.3vw
+				background #282828
+				border-bottom 5px solid #ff4a4a
+				text-align center
+				font-size 20px
+				p
+					margin 0
+					font-weight bold
+					text-transform uppercase
+			.form-container
+				padding 1.2vw 2.3vw 1.8vw
+				p
+					font-size 18px
+					color #ff4a4a
+					margin 0
+				.form-wrap
+					margin 2.08vw auto
+					input:not([type="submit"])
+						display block
+						width 100%
+						background #fff
+						border 1px solid #d6d5d3
+						height 40px
+						padding-left 35px
+						outline 0
+						&:not(:last-child)
+							margin-bottom 1vw
+						&:first-child
+							background url("../images/input-name.png") no-repeat 10px center
+						&:nth-child(2)
+							background url("../images/input-phone.png") no-repeat 10px center
+						&:nth-child(3)
+							background url("../images/input-mail.png") no-repeat 10px center
+					input[type="submit"]
+						display block
+						width 90%
+						margin 0 auto
+						background #ff4a4a
+						color #fff
+						text-transform uppercase
+						letter-spacing 1px
+						font-size 18px
+						font-weight 500
+						height 45px
+						line-height 45px
+						text-align center
+						border none
+						cursor pointer
+						transition 0.2s
+						&:hover
+							background #fb1b1b
+				
