--- a/app/index.jade
+++ b/app/index.jade
@@ -26,8 +26,23 @@ body
 					p <sup>*</sup>Торопитесь, 1 город = 1 франшиза
 					.form-wrap
 						form(action="mail.php")
-							input(type="text" placeholder="Имя")
+							input(type="text" placeholder="Имя" class="err")
 							input(type="text" placeholder="Телефон")
 							input(type="text" placeholder="Email")
 							input(type="submit" value="Заказать звонок")
+			.head-title
+				div Получайте прибыль
+				p.
+					от 230 000 рублей за 3 месяца с помощью франшизы от Школы Высшего Спортивного Мастерства по хоккею.
+				ul
+					li.
+						✓ Прибыль: от 230 000 рублей
+					li.
+						✓ Срок окупаемости: 3 месяца
+					li.
+						✓ Защита от рисков.
+	section.main-info
+		.wrap.
+			Станьте частью Федеральной сети коммерческой школы №1 в России! 18 основных городов + более 50 дополнительных
+
 	
