--- a/app/index.jade
+++ b/app/index.jade
@@ -44,5 +44,7 @@ body
 	section.main-info
 		.wrap.
 			Станьте частью Федеральной сети коммерческой школы №1 в России! 18 основных городов + более 50 дополнительных
+	section.map
+		iframe(src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1368131.0911993438!2d41.24243307956092!3d55.72400570980826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1469872607917" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen)
 
 	
